--- a/style.css
+++ b/style.css
@@ -69,14 +69,13 @@ header {
 
 .navbar a {
     color: #fff;
-    padding: 17.5px;
-    margin: 0 5px;
+    padding-bottom: 15.5px;
+    margin: 0 15px;
     cursor: pointer;
 }
-.navbar a:hover {
+.navbar a:hover { 
     border-bottom: 2px solid white;
-    border-radius: 2px 2px 0 0;
-    transition: all .25s;
-    
-    
+    border-width: 4px;
+
 }
+
